# FIRM_CE

./: .gitignore  CHANGELOG.md  LICENSE  README.md  development  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: coverage.yml  linting_testing.yml
config/: fuels.csv
examples/: model_build_and_evaluate1.py  model_build_and_solve.py  model_build_and_statistics.py
firm_ce/: __init__.py  constants.py  development  file_manager.py  helpers.py  main.py  model.py  timekeeper.py
firm_ce/common/: constants.py  exceptions.py  helpers.py  jit_overload.py  logging.py  settings.py  typing.py
firm_ce/components/: __init__.py  components.py  costs.py  transmission.py
firm_ce/config/: .~lock.generators.csv#  .~lock.initial_guess.csv#  _cost_settings.csv  config.csv  constraints.csv  datafiles.csv  fuels.csv  generators.csv  initial_guess.csv  initial_guess_FULL.csv  initial_guess_test.csv  lines.csv  model.csv  scenarios.csv  scenarios_FULL.csv  scenarios_MEKONG.csv  storages.csv  storages_static.csv
firm_ce/config_VALIDATE/: initial_guess.csv  lines.csv
firm_ce/config_isp/: .~lock.generators.csv#  fuels.csv  generators.csv  lines.csv  scenarios.csv
firm_ce/config_mekong/: generators.csv  storages.csv
firm_ce/config_test/: lines.csv  storages.csv
firm_ce/constructors/: __init__.py  component_cons.py  cost_cons.py  energybalance_cons.py  fleet_cons.py  parameter_cons.py  scenario_cons.py  topology_cons.py  traces_cons.py
firm_ce/data/: flexible_annual_limit.csv
firm_ce/data_mekong/: flexible_annual_limit.csv
firm_ce/fast_methods/: fleet_m.py  generator_m.py  line_m.py  ltcosts_m.py  network_m.py  node_m.py  route_m.py  static_m.py  storage_m.py
firm_ce/helpers/: file_manager.py  helpers.py  validate.py
firm_ce/io/: file_manager.py  validate.py
firm_ce/network/: __init__.py  cwt.py  frequency.py  network.py
firm_ce/optimisation/: __init__.py  balancing.py  broad_optimum.py  constraints.py  numba_classes.py  simple.py  simulation.py  single_time.py  single_time_DEPRECATED.py  single_time_rm.py  solver.py  solver_DEPRECATED.py  statistics.py
firm_ce/settings/: _generator_unit_types.csv  _line_unit_types.csv  _storage_unit_types.csv  settings.csv
firm_ce/system/: __init__.py  components.py  costs.py  energybalance.py  parameters.py  scenario.py  topology.py  traces_DEPRECATED.py
inputs/config/: config.csv  datafiles.csv  fuels.csv  fuels_multiyear.csv  generators.csv  initial_guess.csv  lines.csv  lines_multiyear.csv  reservoirs.csv  scenarios.csv  storages_multiyear.csv
inputs/data/: baseload.csv  inflows.csv  solar.csv
io/: file_manager.py
optimisation/: single_time.py
tests/: test_end_to_end_integration.py  test_topology.py
tools/: result_viewer.ipynb
(+70 files in other folders)
